# game_server

./: CMakeLists.txt  LICENSE  README.md
client/: ClientSimulator.cpp  ClientSimulator.h  main.cpp
docs/: architecture.md  benchmark_report.md  protocol.md
proto/: message.proto
scripts/: build.sh
src/: GameServer.cpp  GameServer.h  main.cpp
src/match/: MatchQueue.cpp  MatchQueue.h
src/net/: ConnectionManager.cpp  ConnectionManager.h  Message.cpp  Message.h  MessageCodec.cpp  MessageCodec.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageId.h  Session.cpp  Session.h  TcpServer.cpp  TcpServer.h
src/player/: MemoryPlayerStateRepository.cpp  MemoryPlayerStateRepository.h  Player.h  PlayerManager.cpp  PlayerManager.h  PlayerRuntimeState.h  PlayerState.h  PlayerStateManager.cpp  PlayerStateManager.h  PlayerStateRepository.h
src/room/: Room.cpp  Room.h  RoomManager.cpp  RoomManager.h
src/service/: ChatService.cpp  ChatService.h  HeartbeatService.cpp  HeartbeatService.h  LoginService.cpp  LoginService.h  MatchService.cpp  MatchService.h  RankingService.cpp  RankingService.h  ReconnectService.cpp  ReconnectService.h
src/util/: IdGenerator.h  Logger.h  MetricsReporter.cpp  MetricsReporter.h  ServerMetrics.cpp  ServerMetrics.h
